updating nbs and removing PDF figures

--- a/notebooks/3i_paper_plots.ipynb
+++ b/notebooks/3i_paper_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "34073bbc-0bd5-4ff6-955f-cdc4e7ecf38b",
    "metadata": {
     "execution": {
@@ -15,20 +15,20 @@
    },
    "outputs": [],
    "source": [
+    "import astropy.units as u\n",
+    "import matplotlib.font_manager as fm\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from astropy.coordinates import SkyCoord\n",
     "from astropy.time import Time\n",
     "from matplotlib import patches\n",
-    "from astropy.coordinates import SkyCoord\n",
-    "import astropy.units as u\n",
-    "import matplotlib.font_manager as fm\n",
     "from mpl_toolkits.axes_grid1.anchored_artists import AnchoredSizeBar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3a4729ed-cb55-4e37-acd1-5a287379d281",
    "metadata": {
     "execution": {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f45ef3bd-1449-4a83-abaf-75123ee4013a",
    "metadata": {
     "execution": {
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "191153cf-8e84-4c8f-b4f7-240dfc192a9a",
    "metadata": {
     "execution": {
@@ -695,18 +695,18 @@
     "\n",
     "    ax[0].legend(fontsize=\"medium\", framealpha=0.2)\n",
     "\n",
-    "    plt.savefig(\n",
-    "        f\"../data/figures/c2025n1_lc_flux_s{sector:04}.pdf\",\n",
-    "        format=\"pdf\",\n",
-    "        bbox_inches=\"tight\",\n",
-    "    )\n",
+    "    # plt.savefig(\n",
+    "    #     f\"../data/figures/c2025n1_lc_flux_s{sector:04}.pdf\",\n",
+    "    #     format=\"pdf\",\n",
+    "    #     bbox_inches=\"tight\",\n",
+    "    # )\n",
     "\n",
     "    plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "8b6514f7-bff3-4a9b-a6d0-717ce32477e4",
    "metadata": {
     "execution": {
@@ -789,7 +789,8 @@
     "            label=f\"MPC First Observation ({mpc1st.iso[:10]})\",\n",
     "        )\n",
     "        axx.axhline(\n",
-    "            np.percentile(lc.empty_mag3, 40), c=\"tab:red\", ls=\"--\", label=\"Average $3\\sigma$ Detection Limit\"\n",
+    "            np.percentile(lc.empty_mag3, 40), c=\"tab:red\", ls=\"--\", \n",
+    "            label=\"Average $3\\sigma$ Detection Limit\"\n",
     "        )\n",
     "\n",
     "    ax[0].set_ylabel(\"$T_{mag}$\", fontsize=13)\n",
@@ -800,11 +801,11 @@
     "\n",
     "    ax[0].legend(fontsize=\"medium\", framealpha=0.2)\n",
     "\n",
-    "    plt.savefig(\n",
-    "        f\"../data/figures/c2025n1_lc_mag_s{sector:04}.png\",\n",
-    "        format=\"png\",\n",
-    "        bbox_inches=\"tight\",\n",
-    "    )\n",
+    "    # plt.savefig(\n",
+    "    #     f\"../data/figures/c2025n1_lc_mag_s{sector:04}.png\",\n",
+    "    #     format=\"png\",\n",
+    "    #     bbox_inches=\"tight\",\n",
+    "    # )\n",
     "\n",
     "    plt.show()\n"
    ]
@@ -1560,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "f5c5ae41-25cb-417b-bb72-3165f47d058f",
    "metadata": {
     "execution": {
@@ -1614,10 +1615,10 @@
     "    plt.xlabel(f\"Time Since Discovery UT {discovery_date.iso[:10]} [d]\", fontsize=13)\n",
     "    plt.ylim(14.4, 22.)\n",
     "    plt.gca().invert_yaxis()\n",
-    "    plt.savefig(\n",
-    "        f\"../data/figures/c2025n1_mpclc_s{sector:04}.png\", \n",
-    "        format=\"png\", bbox_inches='tight',\n",
-    "    )\n",
+    "    # plt.savefig(\n",
+    "    #     f\"../data/figures/c2025n1_mpclc_s{sector:04}.png\", \n",
+    "    #     format=\"png\", bbox_inches='tight',\n",
+    "    # )\n",
     "    plt.show()"
    ]
   },
@@ -1669,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "aba851ae-3bc5-4488-8882-dc72149c46eb",
    "metadata": {
     "execution": {
@@ -1778,10 +1779,10 @@
     "    ax[0, -1].add_artist(scalebar)\n",
     "        \n",
     "        # break\n",
-    "    plt.savefig(\n",
-    "        f\"../data/figures/c2025n1_image_stack_all_s{sector:04}.png\", \n",
-    "        format=\"png\", bbox_inches='tight',\n",
-    "    )\n",
+    "    # plt.savefig(\n",
+    "    #     f\"../data/figures/c2025n1_image_stack_all_s{sector:04}.png\", \n",
+    "    #     format=\"png\", bbox_inches='tight',\n",
+    "    # )\n",
     "    plt.show()"
    ]
   },
@@ -2513,7 +2514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "8c63aa89-1710-4faf-bae1-8a997fd27386",
    "metadata": {
     "execution": {
@@ -2526,105 +2527,7 @@
    },
    "outputs": [],
    "source": [
-    "lc_final.to_csv(\"../data/3i_tess_s0092_time_series.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "2751569f-44c6-4d16-b4e4-b4f52e0db6b7",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-08T15:01:00.127736Z",
-     "iopub.status.busy": "2025-08-08T15:01:00.127357Z",
-     "iopub.status.idle": "2025-08-08T15:01:00.146414Z",
-     "shell.execute_reply": "2025-08-08T15:01:00.145236Z",
-     "shell.execute_reply.started": "2025-08-08T15:01:00.127708Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from astropy.table import QTable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "0c0679ba-0717-455e-88f3-37c9a14d2b66",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-08T15:01:00.649587Z",
-     "iopub.status.busy": "2025-08-08T15:01:00.649139Z",
-     "iopub.status.idle": "2025-08-08T15:01:00.692556Z",
-     "shell.execute_reply": "2025-08-08T15:01:00.691155Z",
-     "shell.execute_reply.started": "2025-08-08T15:01:00.649554Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><i>QTable length=15</i>\n",
-       "<table id=\"table13900467456\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>Time UTC</th><th>Time Window</th><th>N Frames</th><th>RA</th><th>DEC</th><th>Aperture Flux</th><th>Aperture Flux Err</th><th>PRF Flux</th><th>PRF Flux Err</th><th>Aperture Mag</th><th>Aperture Mag Err</th><th>PRF Mag</th><th>PRF Mag Err</th><th>Aperture SNR</th><th>PRF SNR</th><th>RA Expected</th><th>DEC Expected</th><th>Vmag Expected</th><th>RA offset</th><th>DEC offset</th></tr></thead>\n",
-       "<thead><tr><th>d</th><th>d</th><th></th><th>electron / s</th><th>electron / s</th><th>electron / s</th><th>electron / s</th><th>mag</th><th>mag</th><th>mag</th><th>mag</th><th></th><th></th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th>mag</th><th>arcsec</th><th>arcsec</th></tr></thead>\n",
-       "<thead><tr><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
-       "<tr><td>2460804.017658781</td><td>2.0835411333468983</td><td>901.0</td><td>288.1472008648136</td><td>-18.70560105011689</td><td>0.5792289818972071</td><td>0.1883929010899641</td><td>0.6521360862229059</td><td>0.1771461153726618</td><td>21.032874290528923</td><td>0.3566553918749299</td><td>20.904154418152327</td><td>0.2991374467038734</td><td>3.935811706248074</td><td>4.431209284134911</td><td>288.14501602408865</td><td>-18.70494143241218</td><td>19.596466976105862</td><td>-7.865426609942006</td><td>2.374623736957915</td></tr>\n",
-       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>2460827.9374490725</td><td>1.2014649604793703</td><td>520.0</td><td>283.4220143167306</td><td>-18.71728298721007</td><td>3.1600284574507516</td><td>0.5038994291600961</td><td>2.2156495009783073</td><td>0.3088392873126769</td><td>19.190772515876315</td><td>0.1802072924853806</td><td>19.576247351544954</td><td>0.159386367689219</td><td>21.47212481353168</td><td>15.055150062295551</td><td>283.4220265464939</td><td>-18.718823415291467</td><td>18.85797588130091</td><td>0.04402714776006178</td><td>-5.545541093033535</td></tr>\n",
-       "</table></div>"
-      ],
-      "text/plain": [
-       "<QTable length=15>\n",
-       "     Time UTC         Time Window     N Frames         RA        ...   Vmag Expected         RA offset          DEC offset    \n",
-       "        d                  d                      electron / s   ...        mag                arcsec             arcsec      \n",
-       "     float64            float64       float64       float64      ...      float64             float64            float64      \n",
-       "------------------ ------------------ -------- ----------------- ... ------------------ ------------------- ------------------\n",
-       " 2460804.017658781 2.0835411333468983    901.0 288.1472008648136 ... 19.596466976105862  -7.865426609942006  2.374623736957915\n",
-       "               ...                ...      ...               ... ...                ...                 ...                ...\n",
-       "2460827.9374490725 1.2014649604793703    520.0 283.4220143167306 ...  18.85797588130091 0.04402714776006178 -5.545541093033535"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mr_tab = QTable(\n",
-    "    lc_final.values,\n",
-    "    names=[\n",
-    "        \"Time UTC\", \"Time Window\", \"N Frames\",\n",
-    "        \"RA\", \"DEC\", \n",
-    "        \"Aperture Flux\", \"Aperture Flux Err\", \"PRF Flux\", \"PRF Flux Err\", \n",
-    "        \"Aperture Mag\", \"Aperture Mag Err\", \"PRF Mag\", \"PRF Mag Err\", \n",
-    "        \"Aperture SNR\", \"PRF SNR\",\n",
-    "        \"RA Expected\", \"DEC Expected\", \"Vmag Expected\",\n",
-    "        \"RA offset\", \"DEC offset\"\n",
-    "    ],\n",
-    "    units=[\n",
-    " u.d, u.d,\n",
-    " None,\n",
-    " u.electron / u.second,\n",
-    " u.electron / u.second,\n",
-    " u.electron / u.second,\n",
-    " u.electron / u.second,\n",
-    " u.mag, u.mag, u.mag, u.mag,\n",
-    " None, None,\n",
-    " \"deg\", \"deg\", \"deg\", \"deg\",\n",
-    " u.mag, u.arcsec, u.arcsec,\n",
-    "    ],\n",
-    "    descriptions=[\n",
-    "        \"Time in UTC\", \"Size of time window\", \"Number of stacked frames\",\n",
-    "        \"Measured Right Ascension\", \"Measured Declination\",\n",
-    "        \"Aperture flux\", \"Aperture flux error\", \"PRF flux\", \"PRF flux error\",\n",
-    "        \"Aperture TESS magnitude\", \"Aperture TESS magnitude error\", \"PRF TESS magnitude\", \"PRF TESS magnitude error\",\n",
-    "        \"Aperture flux SNR\", \"PRF flux SNR\",\n",
-    "        \"Expected RA from ephemeris\", \"Expected DEC from ephemeris\", \"Expected Vmag from ephemeris\",\n",
-    "        \"Computed RA offset\", \"Computed DEC offset\"\n",
-    "    ]\n",
-    ")\n",
-    "mr_tab"
+    "# lc_final.to_csv(\"../data/3i_tess_s0092_time_series.csv\")"
    ]
   }
  ],
